# Geodesics_in_heat

./: CMakeLists.txt  README.md
src/: geodesicdistance.cpp  geodesicdistance.hpp  main.cpp  vcgtrimesh.cpp  vcgtrimesh.hpp
